<resources>
    <string name="app_name">Weather360</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favourite</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>

    <!-- Settings -->
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="language">Language</string>
    <string name="_7_days">7 Days</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="save_location">Save Location</string>
    <string name="location_type">location_type</string>
    <string name="weather_360">Weather 360</string>
    <string name="alerts">Alerts</string>
    <string name="sure">Sure</string>
    <string name="remove_alert">Remove Alert</string>
    <string name="remove_alert_dialog_message">Are you sure you want to remove this alert?</string>
    <string name="delete_favorite_location">Delete Favorite Location</string>
    <string name="remove_location_dialog_message">Are you sure you want to remove this location from favorites?</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="ok">Ok</string>
    <string name="setup_location">Setup Location</string>
    <string name="gps_based">GPS Based</string>
    <string name="map_based">Map Based</string>
    <string name="ultra_violet">UV</string>
    <string name="pressure">Pressure</string>
    <string name="visiblity">Visiblity</string>
    <string name="today">Today</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius_unit">°C</string>
    <string name="kelvin_unit">K</string>
    <string name="fahrenheit_unit">°F</string>
    <string name="mile_h">mile/h</string>
    <string name="metre_s">metre/s</string>
    <string name="meter">m</string>
    <string name="hpa">hPa</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="weather_is_fine">Weather is fine</string>
    <string name="no_forecast_data_please_enable_your_internet">No forecast data, please enable your internet</string>
    <string name="select_date">Select date</string>
    <string name="select_appointment_time">Select Appointment time</string>
    <string name="please_allow_display_over_other_apps">Please allow \"Display over other apps\"</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="please_enable_your_internet_to_retrieve_the_data">Please enable your internet to retrieve the data</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="please_allow_the_location_permissions_to_get_current_location">Please allow the location permissions to get current location</string>
    <string name="failed_to_retrieve_data">Failed to retrieve data</string>

</resources>