<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_home_black_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/round_favorite_black_24"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/round_notifications_black_24"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/round_settings_black_24"
            android:title="@string/menu_settings" />
    </group>
</menu>