<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.weekly.WeeklyFragment">

    <ImageView
        android:id="@+id/iv_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="add"
        android:src="@drawable/calendar"
        app:layout_constraintBottom_toBottomOf="@+id/tv_weekly_fragment_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_weekly_fragment_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_weekly_fragment_name" />

    <TextView
        android:id="@+id/tv_weekly_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_7_days"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_week"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_weekly"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_week"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/weather_night" />

    <TextView
        android:id="@+id/tv_weekly_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:includeFontPadding="false"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lottie_weekly"
        app:layout_constraintStart_toEndOf="@+id/lottie_weekly"
        app:layout_constraintTop_toTopOf="@+id/lottie_weekly"
        tools:text="20" />

    <TextView
        android:id="@+id/tv_weekly_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:textColor="#80000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_weekly_temp"
        app:layout_constraintStart_toEndOf="@+id/tv_weekly_temp"
        tools:text="/23° C" />

    <TextView
        android:id="@+id/tv_weekly_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#80000000"
        app:layout_constraintStart_toStartOf="@+id/tv_weekly_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_weekly_temp"
        tools:text="Thunderclouds" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomorrow"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_weekly_temp"
        app:layout_constraintStart_toStartOf="@+id/tv_weekly_temp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_weekly_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cv_weekly_humidity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_weekly">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/tv_weekly_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="13 km/h" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="#80000000"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_weekly_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_weekly_wind"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cv_weekly_wind"
        app:layout_constraintTop_toTopOf="@+id/cv_weekly_wind">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/droplet" />

            <TextView
                android:id="@+id/tv_weekly_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:text="24%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="#80000000"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/materialCardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_weekly_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cv_weekly_humidity"
        app:layout_constraintTop_toTopOf="@+id/cv_weekly_humidity">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/tv_weekly_clouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="75%" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud"
                android:textColor="#80000000"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_weekly"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_weekly_humidity"
        tools:listitem="@layout/weekly_item" />

</androidx.constraintlayout.widget.ConstraintLayout>